include/crispasr_session.h

struct crispasr_session;
typedef struct crispasr_session crispasr_session;
CRISPASR_SESSION_API float crispasr_watermark_detect(const float* pcm, int n_samples);
CRISPASR_SESSION_API void crispasr_watermark_embed(float* pcm, int n_samples, float alpha);
// Set the active backend's companion codec/tokenizer model. For OmniVoice this
// is its HiggsAudioV2 tokenizer; for Chatterbox it is S3Gen.
CRISPASR_SESSION_API int crispasr_session_set_codec_path(crispasr_session* s, const char* path);
// Set the active TTS backend's voice from its native format. Chatterbox accepts
// a conditioning GGUF or reference WAV; OmniVoice accepts a reference WAV and
// uses ref_text_or_null as its transcript. Returns -3 when the active backend
// has no voice-setting implementation.
CRISPASR_SESSION_API int crispasr_session_set_voice(crispasr_session* s, const char* path,
                                                    const char* ref_text_or_null);
CRISPASR_SESSION_API int crispasr_session_set_speaker_name(crispasr_session* s, const char* name);
CRISPASR_SESSION_API int crispasr_session_set_speaker_id(crispasr_session* s, int id);
CRISPASR_SESSION_API int crispasr_session_n_speakers(crispasr_session* s);
CRISPASR_SESSION_API const char* crispasr_session_get_speaker_name(crispasr_session* s, int i);
CRISPASR_SESSION_API int crispasr_session_set_instruct(crispasr_session* s, const char* instruct);
// #316: synthesize `phonemes` verbatim instead of phonemizing the text — the
// seam between text processing and the acoustic model. Use it to reproduce
// another implementation's pronunciation exactly, or to separate "the G2P is
// wrong" from "the model is wrong". Empty clears. Returns -2 (soft no-op) when
// phonemes-in call; kokoro and piper do.
CRISPASR_SESSION_API int crispasr_session_set_tts_phonemes(crispasr_session* s, const char* phonemes);
// Pad N ms of silence at the beginning of TTS output. Useful to bypass VLC playback bugs
// where it drops the first ~1.5s of audio while parsing a large C2PA chunk.
CRISPASR_SESSION_API void crispasr_session_set_tts_pad_silence_ms(crispasr_session* s, int ms);
CRISPASR_SESSION_API int crispasr_session_is_custom_voice(crispasr_session* s);
CRISPASR_SESSION_API int crispasr_session_is_voice_design(crispasr_session* s);
// UNMARKED synthesis — hard-refused unless crispasr_session_accept_marking_responsibility() was called first.
CRISPASR_SESSION_API float* crispasr_session_synthesize_raw(crispasr_session* s, const char* text, int* out_n_samples);
CRISPASR_SESSION_API float* crispasr_session_synthesize(crispasr_session* s, const char* text, int* out_n_samples);
// Attest acceptance of AI-content marking/disclosure duty (required for _raw); recorded for audit.
CRISPASR_SESSION_API int crispasr_session_accept_marking_responsibility(crispasr_session* s, const char* attestation);
// Declare whose voice the current PRESET voice is: "real_person" | "synthetic" |
// "unknown". A preset can be an identifiable individual (a named donor, a corpus
// speaker), which makes its output a deep fake under Art. 3(60) even though no
// recording passed through a baker — so "not a clone" is not the same as
// "nothing to disclose". Setting real_person makes the Art. 50(4) reminder fire
// for a non-cloned voice; it does NOT require a consent attestation, because the
// donor's agreement to the training is settled upstream and you cannot attest to
// it. Returns 0, -1 on a bad session, -2 on an unrecognised value.
CRISPASR_SESSION_API int crispasr_session_set_speaker_identity(crispasr_session* s, const char* identity);
CRISPASR_SESSION_API void crispasr_pcm_free(float* pcm);
CRISPASR_SESSION_API float* crispasr_session_speech_to_speech(crispasr_session* s, const float* in_samples,
                                                              int n_in_samples, char** out_text, int* out_n_samples);
CRISPASR_SESSION_API int crispasr_session_set_hotwords(crispasr_session* s, const char* hotwords, float boost);
// Source separation: split audio into N stems (drums, bass, other, vocals).
// Input: stereo interleaved PCM at the model's native rate (44100 Hz for htdemucs).
// Returns stem count (>0) on success, -1 on error. Call crispasr_session_separate_stem
// to retrieve individual stem PCM after a successful separate call.
CRISPASR_SESSION_API int crispasr_session_separate(crispasr_session* s, const float* pcm_stereo, int n_samples);
CRISPASR_SESSION_API int crispasr_session_separate_n_stems(crispasr_session* s);
CRISPASR_SESSION_API const char* crispasr_session_separate_stem_name(crispasr_session* s, int stem_idx);
// Returns pointer to interleaved stereo PCM for stem_idx. Owned by the session;
// valid until the next separate() call or session close. *out_n_samples receives
// the per-channel sample count.
CRISPASR_SESSION_API const float* crispasr_session_separate_stem(crispasr_session* s, int stem_idx, int* out_n_samples);
CRISPASR_SESSION_API int crispasr_session_separate_sample_rate(crispasr_session* s);
CRISPASR_SESSION_API char* crispasr_session_translate_text(crispasr_session* s, const char* text, const char* src_lang,
                                                           const char* tgt_lang, int max_tokens);
CRISPASR_SESSION_API void crispasr_session_translate_text_free(char* text);
CRISPASR_SESSION_API int crispasr_session_kokoro_clear_phoneme_cache(crispasr_session* s);
CRISPASR_SESSION_API int crispasr_session_kokoro_clear_phoneme_cache(crispasr_session*);
CRISPASR_SESSION_API int crispasr_session_set_source_language(crispasr_session* s, const char* lang);
CRISPASR_SESSION_API int crispasr_session_set_target_language(crispasr_session* s, const char* lang);
// #329 — the language a voice-cloning REFERENCE clip is spoken in (ISO-ish;
// "" or NULL clears). Cross-lingual TTS backends (cosyvoice3) compare it to the
// requested output language and, when they differ, drop the reference
// transcript so the clone speaks the target language instead of carrying the
// reference's accent. Optional: the backend otherwise infers it from the voice
// bank or the reference transcript, which cannot answer for a short one.
CRISPASR_SESSION_API int crispasr_session_set_tts_reference_language(crispasr_session* s, const char* lang);
CRISPASR_SESSION_API int crispasr_session_set_punctuation(crispasr_session* s, int enable);
// Select + load a punctuation-restoration model (alias auto|firered|fullstop|
// punctuate-all|pcs, or a .gguf path; "none"/NULL unloads). Auto-downloads on
// first use. Restores punctuation on backends that emit none (parakeet, CTC).
// Returns 0 on success/unload, -1 bad handle, -2 load failed, -3 not compiled.
CRISPASR_SESSION_API int crispasr_session_set_punc_model(crispasr_session* s, const char* punc_model);
CRISPASR_SESSION_API int crispasr_session_set_translate(crispasr_session* s, int enable);
CRISPASR_SESSION_API int crispasr_session_set_ask(crispasr_session* s, const char* prompt);
CRISPASR_SESSION_API int crispasr_session_set_temperature(crispasr_session* s, float temperature, uint64_t seed);
CRISPASR_SESSION_API int crispasr_session_set_tts_seed(crispasr_session* s, uint64_t seed);
CRISPASR_SESSION_API int crispasr_session_set_tts_steps(crispasr_session* s, int steps);
CRISPASR_SESSION_API int crispasr_session_set_tts_num_candidates(crispasr_session* s, int n);
CRISPASR_SESSION_API int crispasr_session_set_g2p_dict(crispasr_session* s, const char* source);
CRISPASR_SESSION_API int crispasr_session_set_top_p(crispasr_session* s, float top_p);
CRISPASR_SESSION_API int crispasr_session_set_min_p(crispasr_session* s, float min_p);
CRISPASR_SESSION_API int crispasr_session_set_repetition_penalty(crispasr_session* s, float r);
CRISPASR_SESSION_API int crispasr_session_set_top_k(crispasr_session* s, int top_k);
CRISPASR_SESSION_API int crispasr_session_set_do_sample(crispasr_session* s, int enable);
CRISPASR_SESSION_API int crispasr_session_set_cfg_weight(crispasr_session* s, float cfg_weight);
CRISPASR_SESSION_API int crispasr_session_set_tts_noise_temp(crispasr_session* s, float noise_temp);
CRISPASR_SESSION_API int crispasr_session_set_exaggeration(crispasr_session* s, float exaggeration);
CRISPASR_SESSION_API int crispasr_session_set_max_speech_tokens(crispasr_session* s, int n);
// Issue #360: the floor counterpart to set_max_speech_tokens. UNITS are the
// backend's own AR decode step — NOT samples, NOT milliseconds. Today only the
// MOSS TTS backends consume it, where one unit is an audio-codec frame at
// sampling_rate / downsample_rate (24000 / 1920 = 12.5 Hz on the shipped
// models), i.e. 80 ms per frame, so n = 25 floors the output at ~2 s. It works
// by masking the audio-end token until n frames exist, so it bounds the decode
// rather than padding the result. Other backends return -2.
CRISPASR_SESSION_API int crispasr_session_set_min_speech_tokens(crispasr_session* s, int n);
CRISPASR_SESSION_API int crispasr_session_set_length_scale(crispasr_session* s, float scale);
CRISPASR_SESSION_API int crispasr_session_set_best_of(crispasr_session* s, int n);
CRISPASR_SESSION_API int crispasr_session_set_max_new_tokens(crispasr_session* s, int n);
CRISPASR_SESSION_API int crispasr_session_set_frequency_penalty(crispasr_session* s, float penalty);
CRISPASR_SESSION_API int crispasr_session_set_beam_size(crispasr_session* s, int n);
CRISPASR_SESSION_API int crispasr_session_set_return_logits(crispasr_session* s, int enable);
CRISPASR_SESSION_API int crispasr_session_set_grammar_text(crispasr_session* s, const char* gbnf_text,
                                                           const char* root_rule, float penalty);
CRISPASR_SESSION_API int crispasr_session_set_fallback_thresholds(crispasr_session* s, float entropy_thold,
                                                                  float logprob_thold, float no_speech_thold,
                                                                  float temperature_inc);
CRISPASR_SESSION_API int crispasr_session_set_alt_n(crispasr_session* s, int n);
CRISPASR_SESSION_API int crispasr_session_set_whisper_decode_extras(crispasr_session* s, int suppress_nst,
                                                                    const char* suppress_regex,
                                                                    int carry_initial_prompt);
CRISPASR_SESSION_API int crispasr_session_detect_language(crispasr_session* s, const float* pcm, int n_samples,
                                                          const char* lid_model_path, int method, char* out_lang,
                                                          int out_lang_cap, float* out_prob);