crispasr-sys/src/lib.rs


    // --- TTS synthesis (vibevoice, qwen3-tts, kokoro, orpheus) ---
    pub fn crispasr_session_set_codec_path(s: *mut CrispasrSession, path: *const c_char) -> c_int;
    pub fn crispasr_session_set_voice(
        s: *mut CrispasrSession,
        path: *const c_char,
        ref_text_or_null: *const c_char,
    ) -> c_int;
    pub fn crispasr_session_set_speaker_name(s: *mut CrispasrSession, name: *const c_char)
        -> c_int;
    pub fn crispasr_session_n_speakers(s: *mut CrispasrSession) -> c_int;
    pub fn crispasr_session_get_speaker_name(s: *mut CrispasrSession, i: c_int) -> *const c_char;
    // qwen3-tts VoiceDesign: natural-language voice description.
    pub fn crispasr_session_set_instruct(s: *mut CrispasrSession, instruct: *const c_char)
        -> c_int;
    // #316: synthesize these phonemes verbatim, skipping the G2P. Empty clears.
    // -2 = the active backend has no phonemes-in call (kokoro and piper do).
    pub fn crispasr_session_set_tts_phonemes(
        s: *mut CrispasrSession,
        phonemes: *const c_char,
    ) -> c_int;
    pub fn crispasr_session_set_tts_pad_silence_ms(
        s: *mut CrispasrSession,
        ms: c_int,
    );
    // qwen3-tts variant detection (returns 0/1; 0 also covers "not qwen3-tts").
    pub fn crispasr_session_is_custom_voice(s: *mut CrispasrSession) -> c_int;
    pub fn crispasr_session_is_voice_design(s: *mut CrispasrSession) -> c_int;
    pub fn crispasr_session_synthesize(
        s: *mut CrispasrSession,
        text: *const c_char,
        out_n_samples: *mut c_int,
    ) -> *mut f32;
    // Speech-to-Speech — audio in -> audio out via a single model pass. Supported
    // on S2S-capable backends (lfm2-audio, mini-omni2, sidon, voxcpm2-vae). Returns
    // malloc'd f32 PCM (free with `crispasr_pcm_free`); `out_text`, if non-null,
    // receives the malloc'd intermediate transcript (free with
    // `crispasr_session_translate_text_free`). Returns null on failure / unsupported.
    pub fn crispasr_session_speech_to_speech(
        s: *mut CrispasrSession,
        in_samples: *const f32,
        n_in_samples: c_int,
        out_text: *mut *mut c_char,
        out_n_samples: *mut c_int,
    ) -> *mut f32;
    // Source separation (#359). Stereo interleaved PCM in at the model's own
    // rate (44100 Hz for htdemucs / mel-band-roformer); returns the stem count.
    // Stem buffers are owned by the session and valid only until the next
    // separate() call or close, so a safe wrapper must copy them out.
    pub fn crispasr_session_separate(
        s: *mut CrispasrSession,
        pcm_stereo: *const f32,
        n_samples: c_int,
    ) -> c_int;
    pub fn crispasr_session_separate_n_stems(s: *mut CrispasrSession) -> c_int;
    pub fn crispasr_session_separate_stem_name(
        s: *mut CrispasrSession,
        stem_idx: c_int,
    ) -> *const c_char;
    pub fn crispasr_session_separate_stem(
        s: *mut CrispasrSession,
        stem_idx: c_int,
        out_n_samples: *mut c_int,
    ) -> *const f32;
    pub fn crispasr_session_separate_sample_rate(s: *mut CrispasrSession) -> c_int;
    // UNMARKED synthesis (no watermark/disclosure). Hard-refused unless
    // `crispasr_session_accept_marking_responsibility` was called first. Returns
    // malloc'd f32 PCM (free with `crispasr_pcm_free`); null on refusal/failure.
    pub fn crispasr_session_synthesize_raw(
        s: *mut CrispasrSession,
        text: *const c_char,
        out_n_samples: *mut c_int,
    ) -> *mut f32;
    // Attest that the integrator accepts AI-content marking/disclosure
    // responsibility (EU AI Act Art. 50). REQUIRED before `synthesize_raw`.
    pub fn crispasr_session_accept_marking_responsibility(
        s: *mut CrispasrSession,
        attestation: *const c_char,
    ) -> c_int;
    // Declare whose voice a PRESET voice is: "real_person" | "synthetic" |
    // "unknown". A preset can be an identifiable individual, which makes its
    // output a deep fake under Art. 3(60) without any cloning. Returns 0, -1 on
    // a bad session, -2 on an unrecognised value.
    pub fn crispasr_session_set_speaker_identity(
        s: *mut CrispasrSession,
        identity: *const c_char,
    ) -> c_int;
    // Sample rate the backend expects for input PCM (16000 for Whisper-family,
    // the model's native rate otherwise; 0 on error). Pair with s2s/synthesize to
    // feed input at the right rate.
    pub fn crispasr_session_input_sample_rate(s: *mut CrispasrSession) -> c_int;
    // #332: output-side counterparts. output_sample_rate is the rate of the
    // PCM synthesize / speech_to_speech return (0 = backend has no audio
    // output); the channel getters are 1 (mono) for every current backend.
    pub fn crispasr_session_output_sample_rate(s: *mut CrispasrSession) -> c_int;
    pub fn crispasr_session_input_channels(s: *mut CrispasrSession) -> c_int;
    pub fn crispasr_session_output_channels(s: *mut CrispasrSession) -> c_int;
    pub fn crispasr_pcm_free(pcm: *mut f32);
    // Embed the AI-content watermark into f32 mono PCM, in place. The other
    // half of `synthesize_raw`: opting out of automatic marking obliges the
    // caller to mark the result, and this is what they mark it with.
    // `alpha <= 0` selects the robust, reliably detectable default.
    pub fn crispasr_watermark_embed(pcm: *mut f32, n_samples: c_int, alpha: c_float);
    // Confidence in [0, 1] that `pcm` carries the watermark. A weak diagnostic:
    // the spread-spectrum null mean is 0.5, not 0 (see docs/eu-ai-act.md §6.7).
    pub fn crispasr_watermark_detect(pcm: *const c_float, n_samples: c_int) -> c_float;
    // Drop the kokoro per-session phoneme cache. No-op for non-kokoro
    // backends. Returns 0 on success, -1 if `s` is null. (PLAN #56 #5)
    pub fn crispasr_session_kokoro_clear_phoneme_cache(s: *mut CrispasrSession) -> c_int;

    // --- Sticky session-state setters (PLAN #59 partial unblock) ---
    pub fn crispasr_session_set_source_language(
        s: *mut CrispasrSession,
        lang: *const c_char,
    ) -> c_int;
    pub fn crispasr_session_set_target_language(
        s: *mut CrispasrSession,
        lang: *const c_char,
    ) -> c_int;
    pub fn crispasr_session_set_tts_reference_language(
        s: *mut CrispasrSession,
        lang: *const c_char,
    ) -> c_int;
    pub fn crispasr_session_set_punctuation(s: *mut CrispasrSession, enable: c_int) -> c_int;
    pub fn crispasr_session_set_punc_model(
        s: *mut CrispasrSession,
        punc_model: *const c_char,
    ) -> c_int;
    pub fn crispasr_session_set_hotwords(
        s: *mut CrispasrSession,
        hotwords: *const c_char,
        boost: c_float,
    ) -> c_int;
    pub fn crispasr_session_set_sensitivity(
        s: *mut CrispasrSession,
        preset: *const c_char,
    ) -> c_int;
    pub fn crispasr_session_set_g2p_dict(s: *mut CrispasrSession, source: *const c_char) -> c_int;
    pub fn crispasr_session_set_speaker_id(s: *mut CrispasrSession, id: c_int) -> c_int;
    pub fn crispasr_session_set_translate(s: *mut CrispasrSession, enable: c_int) -> c_int;
    // --- Text-to-text translation (m2m100 / m2m100-wmt21 / madlad / gemma4-e2b) ---
    //
    // Distinct from `crispasr_session_set_translate` above, which is the
    // *audio-side* Whisper sticky flag (PCM input → English text out).
    // This one translates an already-extracted Rust string between
    // arbitrary language pairs via whichever MT-capable backend the
    // session loaded.  Returns a malloc'd UTF-8 buffer that the caller
    // MUST release via `crispasr_session_translate_text_free` (mirrors
    // the punc-side ownership pattern).  Returns nullptr on:
    //   * any input pointer being null,
    //   * the session not having a CAP_TRANSLATE backend loaded,
    //   * the backend's internal translate routine erroring out.
    //
    // `max_tokens` caps the decoder output length.  Pass `<= 0` to
    // fall back to the C++ default (200 for m2m100).
    pub fn crispasr_session_translate_text(
        s: *mut CrispasrSession,
        text: *const c_char,
        src_lang: *const c_char,
        tgt_lang: *const c_char,
        max_tokens: c_int,
    ) -> *mut c_char;
    // Free a buffer previously returned by `crispasr_session_translate_text`.
    // No-op when `text` is null.  Calling `libc::free` directly also works
    // (the C++ side just delegates to `free()`), but routing through this
    // symbol keeps ownership symmetric and protects callers if the C++
    // side ever switches allocators.
    pub fn crispasr_session_translate_text_free(text: *mut c_char);
    pub fn crispasr_session_set_temperature(
        s: *mut CrispasrSession,
        temperature: c_float,
        seed: u64,
    ) -> c_int;
    pub fn crispasr_session_set_tts_seed(s: *mut CrispasrSession, seed: u64) -> c_int;
    pub fn crispasr_session_set_max_new_tokens(
        s: *mut CrispasrSession,
        max_new_tokens: c_int,
    ) -> c_int;
    pub fn crispasr_session_set_frequency_penalty(
        s: *mut CrispasrSession,
        penalty: c_float,
    ) -> c_int;
    pub fn crispasr_session_set_tts_steps(s: *mut CrispasrSession, steps: c_int) -> c_int;
    pub fn crispasr_session_set_tts_num_candidates(s: *mut CrispasrSession, n: c_int) -> c_int;
    pub fn crispasr_session_set_top_p(s: *mut CrispasrSession, top_p: c_float) -> c_int;
    pub fn crispasr_session_set_top_k(s: *mut CrispasrSession, top_k: c_int) -> c_int;
    pub fn crispasr_session_set_do_sample(s: *mut CrispasrSession, enable: c_int) -> c_int;
    pub fn crispasr_session_set_min_p(s: *mut CrispasrSession, min_p: c_float) -> c_int;
    pub fn crispasr_session_set_repetition_penalty(s: *mut CrispasrSession, r: c_float) -> c_int;
    pub fn crispasr_session_set_cfg_weight(s: *mut CrispasrSession, cfg_weight: c_float) -> c_int;
    pub fn crispasr_session_set_tts_noise_temp(
        s: *mut CrispasrSession,
        noise_temp: c_float,
    ) -> c_int;
    pub fn crispasr_session_set_exaggeration(
        s: *mut CrispasrSession,
        exaggeration: c_float,
    ) -> c_int;
    pub fn crispasr_session_set_max_speech_tokens(s: *mut CrispasrSession, n: c_int) -> c_int;
    pub fn crispasr_session_set_min_speech_tokens(s: *mut CrispasrSession, n: c_int) -> c_int;
    pub fn crispasr_session_set_length_scale(s: *mut CrispasrSession, scale: c_float) -> c_int;
    pub fn crispasr_session_set_best_of(s: *mut CrispasrSession, n: c_int) -> c_int;
    pub fn crispasr_session_set_beam_size(s: *mut CrispasrSession, n: c_int) -> c_int;
    pub fn crispasr_session_set_return_logits(s: *mut CrispasrSession, enable: c_int) -> c_int;
    pub fn crispasr_session_set_grammar_text(
        s: *mut CrispasrSession,
        gbnf_text: *const c_char,
        root_rule: *const c_char,
        penalty: c_float,
    ) -> c_int;
    pub fn crispasr_session_set_fallback_thresholds(
        s: *mut CrispasrSession,
        entropy_thold: c_float,
        logprob_thold: c_float,
        no_speech_thold: c_float,
        temperature_inc: c_float,
    ) -> c_int;
    pub fn crispasr_session_set_alt_n(s: *mut CrispasrSession, n: c_int) -> c_int;
    pub fn crispasr_session_set_whisper_decode_extras(
        s: *mut CrispasrSession,
        suppress_nst: c_int,
        suppress_regex: *const c_char,
        carry_initial_prompt: c_int,
    ) -> c_int;
    pub fn crispasr_session_set_ask(s: *mut CrispasrSession, prompt: *const c_char) -> c_int;
    pub fn crispasr_session_detect_language(
        s: *mut CrispasrSession,
        pcm: *const c_float,
        n_samples: c_int,
        lid_model_path: *const c_char,
        method: c_int,
        out_lang: *mut c_char,
        out_lang_cap: c_int,
        out_prob: *mut c_float,
    ) -> c_int;
